gitops/manifests/prowlarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      nodeSelector:
          kubernetes.io/hostname: stuart 
      securityContext:
        runAsUser: 321  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321 
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 9696 
          resources:
            requests:
              memory: "5G"  
              cpu: "500m"      
            limits:
              memory: "10G"  
              cpu: "1000m"
          volumeMounts:
            - mountPath: /config  # Mount for Radarr config
              name: config-storage
            - mountPath: /data # Single volume for Movies and Downloads
              name: data-storage
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: pvc-radarr-config # PVC for config storage
        - name: data-storage
          persistentVolumeClaim:
            claimName: pvc-radarr-data   # PVC for data storage
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 9696 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
  tls:
  - hosts:
      - prowlarr.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
